crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__boolean__strict_trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let ignored#1 : int = trace "before" in 0 in
case@Bool true of
  True -> 42
  False -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "before")] (delay (con integer 0))])])
--- optimized Core
let ignored#2 : int = trace "before" in 0 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam ignored_1 (con integer 42))
      (force [[builtin_2 (con string "before")] (delay (con integer 0))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let ignored#1 : int = trace "before" in 0 in
case@Bool true of
  True -> 42
  False -> error
--- uplc before
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "before")] (delay (con integer 0))])])
--- core after
let ignored#1 : int = trace "before" in 0 in
42
--- uplc after
(program 1.1.0
  [(lam ignored_1 (con integer 42))
    (force
      [[(force (builtin trace)) (con string "before")] (delay (con integer 0))])])
--- result
(con integer 42)
--- logs
["before"]
